روبوت  إضافة: [[jv:Awdal]]

--- a/Awdal.mw
+++ b/Awdal.mw
@@ -43,6 +43,12 @@ Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku t
 {{Gobolada_Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
+== Dhibaatooyinka xuduudiga ah ==
+Gobolkan awdal waxa uu xuduud la leeyahay gobolka maroodi jeex ( Hargeisa ) iyo dalalka ethiopia iyo jabuuti. Intaba waxa ka haysta dhibaatooyin xuduudi ah oo aad u kulul.
+*Hargaysa
+gobolka hargaysa waxa ay isku qabsadeen dagmooyin xiligii doorashooyinka wakiilada, arintaasi oo markii danbe golaha guurtida iyo wakiiladu si afduubasho ah ugu magacaabeen gobolka hargaysa. dadka adagaanadaas dagan oo ka soo jeeda dhamaan beelaha [[maxad case]] ee [[samaroon]] iyo in yar oo [[reer nuur]] ayaa arintaasi aad u kicisay. sidoo kale waxa beelaha [[reer nuur]]([[samaroon]]) iyo beelaha [[sacad muuse]] ([[isaaq]]) ay isku qabsadeen dhulalka banka ee [[wajaale]] arintaasi oo markii ugu danbaysay gaadhay heer la is xabadeeyo hadan xukuumada somaliland ay eeda saartay beesha [[reer nuur]] loona xidhay afartan dagaalyahan oo [[reer nuur]] iyaga iyo hubkoodii fududaa oo ahaa 40 [[AK-47]] iyo shan mbk. arintaasi oo uu qaboojiyay madaxwaynuhu markii uu cuqaasha reer nuur ku qanciyay markale ee i ixtiraama. 
+arintan iyo kuwa kale oo badan waxa si wanaagsan loogu xusay aragtida [[awdalaynta]] ee ay soo saareen aqoonyahanada [[dharaar institite]].
+
 [[ar:أودل]]
 [[de:Awdal (Region)]]
 [[en:Awdal]]
@@ -51,13 +57,7 @@ Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku t
 [[fr:Awdal]]
 [[id:Awdal]]
 [[it:Awdal]]
+[[jv:Awdal]]
 [[nl:Awdal]]
 [[pt:Awdal]]
 [[sv:Awdal]]
-
-
-== Dhibaatooyinka xuduudiga ah ==
-Gobolkan awdal waxa uu xuduud la leeyahay gobolka maroodi jeex ( Hargeisa ) iyo dalalka ethiopia iyo jabuuti. Intaba waxa ka haysta dhibaatooyin xuduudi ah oo aad u kulul.
-*Hargaysa
-gobolka hargaysa waxa ay isku qabsadeen dagmooyin xiligii doorashooyinka wakiilada, arintaasi oo markii danbe golaha guurtida iyo wakiiladu si afduubasho ah ugu magacaabeen gobolka hargaysa. dadka adagaanadaas dagan oo ka soo jeeda dhamaan beelaha [[maxad case]] ee [[samaroon]] iyo in yar oo [[reer nuur]] ayaa arintaasi aad u kicisay. sidoo kale waxa beelaha [[reer nuur]]([[samaroon]]) iyo beelaha [[sacad muuse]] ([[isaaq]]) ay isku qabsadeen dhulalka banka ee [[wajaale]] arintaasi oo markii ugu danbaysay gaadhay heer la is xabadeeyo hadan xukuumada somaliland ay eeda saartay beesha [[reer nuur]] loona xidhay afartan dagaalyahan oo [[reer nuur]] iyaga iyo hubkoodii fududaa oo ahaa 40 [[AK-47]] iyo shan mbk. arintaasi oo uu qaboojiyay madaxwaynuhu markii uu cuqaasha reer nuur ku qanciyay markale ee i ixtiraama. 
-arintan iyo kuwa kale oo badan waxa si wanaagsan loogu xusay aragtida [[awdalaynta]] ee ay soo saareen aqoonyahanada [[dharaar institite]].
