روبوت  إضافة: [[el:Νταχίρ Ριγιάλε Καχίν]]

--- a/Daahir_Rayaale_Kaahin.mw
+++ b/Daahir_Rayaale_Kaahin.mw
@@ -8,6 +8,7 @@
 [[Category:Soomaaliya]]
 
 [[de:Dahir Riyale Kahin]]
+[[el:Νταχίρ Ριγιάλε Καχίν]]
 [[en:Dahir Riyale Kahin]]
 [[es:Dahir Riyale Kahin]]
 [[id:Dahir Riyale Kahin]]
