--- a/Af_Soomaali.mw
+++ b/Af_Soomaali.mw
@@ -1,3 +1,73 @@
 Af-soomaligu waa luqad aad u fudud,waxaa lagaga hadlaa wadanka [[soomaaliya]]oo ku yaala qaaradda afrika.wadankaas ooa y ku nool yihiin dad aad u badan oo dhamaantood ku hadlaan luqada afsoomaliga. Af-soomaaliga waxaa la qoray Sanadkii [[1974]]kii,wakhtigaas oo uu xukumayey wadanka soomaaliya [[Maxamed Siyaad Barre]] oo wadanka ku qabsaday afgambi ciidan.Af-soomaaliga waxaa lagu qoraa xuruufta laatiiniga ah.Qoraalkii Af-soomaaliga waxaa ka qayb qaatay Aqoonyahano soomaaliyeed oo aad u fara badan.higaadda Af-soomaligu waa sidan'''(B T J X KH D R S SH DH C G F Q K L M N W H Y )'''.
 
-*[[Af Soomaali]]
+Af-Soomaaliga waxaa looga hadlaa dalalka [[Soomaaliya]], [[Kenya]], [[Itoobiya]] iyo [[Jabuuti]].
+
+{| class="wikitable"
+! Français || Af-Soomaali || Prononciation standard
+|--
+| terre      || ||
+|--
+| ciel       || cir-ka||
+|--
+| eau        || biya-ha||
+|--
+| feu        || dab-ka||
+|--
+| garçon      || rag-ga||
+|--
+| fille       || naag-ta||
+|--
+| homme       ||niin-ka||
+|--
+| femmes      || dumar-ka||
+|--
+| manger     || cun||
+|--
+| je mange   || waan cunaya||
+|--
+| boire      || cab||
+|--
+| je bois    || waan cabeya ||
+|--
+| grand      || dheer||
+|--
+| petit      || yar||
+|--
+| nuit       || habeen-ka||
+|--
+| jour       || maalin-ta||
+|}
+
+[[Category:Afafka]]
+
+[[am:ሶማልኛ]]
+[[ar:لغة صومالية]]
+[[bg:Сомалийски език]]
+[[bn:সোমালি ভাষা]]
+[[br:Somalieg]]
+[[da:Somali (sprog)]]
+[[de:Somali (Sprache)]]
+[[en:Somali language]]
+[[eo:Somala lingvo]]
+[[es:Idioma somalí]]
+[[eu:Somaliera]]
+[[fi:Somalin kieli]]
+[[fr:Somali]]
+[[hsb:Somališćina]]
+[[id:Bahasa Somali]]
+[[io:Somaliana linguo]]
+[[it:Lingua somala]]
+[[ja:ソマリ語]]
+[[ko:소말리어]]
+[[mr:सोमाली भाषा]]
+[[ms:Bahasa Somali]]
+[[nl:Somalisch]]
+[[nn:Somali]]
+[[no:Somali]]
+[[pl:Język somalijski]]
+[[pt:Língua somali]]
+[[ru:Сомалийский язык]]
+[[sv:Somaliska]]
+[[th:ภาษาโซมาเลีย]]
+[[tr:Somalice]]
+[[zh:索馬利亞語]]
