--- a/Malta.mw
+++ b/Malta.mw
@@ -1,1 +1,93 @@
-Wadanka malya wuxuu dhaaca bada medatereeniyanka
+Wadanka malya wuxuu dhaaca [[bada medatereeniyanka]]
+
+[[Category:Yurub]]
+
+[[fr:Malte]]
+[[frp:Malta]]
+[[fur:Malte]]
+[[fy:Malta]]
+[[ga:Málta]]
+[[gl:Malta]]
+[[gv:Malta]]
+[[he:מלטה]]
+[[hi:माल्टा]]
+[[hr:Malta]]
+[[hsb:Malta]]
+[[ht:Malt]]
+[[hu:Málta]]
+[[hy:Մալթա]]
+[[ia:Malta]]
+[[id:Malta]]
+[[ie:Malta]]
+[[ilo:Malta]]
+[[io:Malta]]
+[[is:Malta]]
+[[it:Malta]]
+[[ja:マルタ]]
+[[jbo:maltas]]
+[[jv:Malta]]
+[[ka:მალტა]]
+[[kk:Малта]]
+[[ko:몰타]]
+[[ks:माल्टा]]
+[[ku:Malta]]
+[[kw:Malta]]
+[[la:Melitta]]
+[[lb:Malta]]
+[[li:Malta]]
+[[lij:Malta]]
+[[ln:Malta]]
+[[lt:Malta]]
+[[lv:Malta]]
+[[mk:Малта]]
+[[ms:Malta]]
+[[mt:Malta]]
+[[nah:Malta]]
+[[nds:Malta]]
+[[nds-nl:Malta (laand)]]
+[[ne:माल्टा]]
+[[new:मल्ता]]
+[[nl:Malta (land)]]
+[[nn:Malta]]
+[[no:Malta]]
+[[nov:Malta]]
+[[nrm:Malte]]
+[[oc:Malta]]
+[[os:Мальтæ (паддзахад)]]
+[[pam:Malta]]
+[[pl:Malta]]
+[[pms:Malta]]
+[[ps:مالټا]]
+[[pt:Malta]]
+[[qu:Malta]]
+[[rmy:Malta]]
+[[ro:Malta]]
+[[roa-rup:Malta]]
+[[ru:Мальта]]
+[[scn:Malta]]
+[[sco:Maltae]]
+[[se:Málta]]
+[[sh:Malta]]
+[[simple:Malta]]
+[[sk:Malta]]
+[[sl:Malta]]
+[[sq:Malta]]
+[[sr:Малта]]
+[[sv:Malta]]
+[[sw:Malta]]
+[[ta:மோல்ட்டா]]
+[[tet:Malta]]
+[[tg:Малта]]
+[[th:ประเทศมอลตา]]
+[[tl:Malta]]
+[[udm:Мальта]]
+[[uk:Мальта]]
+[[uz:Malta]]
+[[vec:Malta]]
+[[vi:Malta]]
+[[vo:Malteän]]
+[[wa:Male]]
+[[war:Malta]]
+[[wo:Malt]]
+[[zh:马耳他]]
+[[zh-min-nan:Malta]]
