--- a/Yurub.mw
+++ b/Yurub.mw
@@ -5,14 +5,15 @@
 *[[Denmark]] 
 *[[Faransiis]]
 *[[Finland]]
+*[[Ingriis]]
 *[[Jarmal]]
+*[[Malta]]
 *[[Nederland]]
 *[[Norwey]]
 *[[Ruush]]
 *[[Slovakia]]
 *[[Sweden]]
 *[[Talyaani]]
-*[[Ingriis]]
 *[[Boortiqiis]]
 *[[Ispaanyoole]]
 *[[Waqooyiga ayrland]]
