*Empty MediaWiki Message*

--- a/Malta.mw
+++ b/Malta.mw
@@ -1,4 +1,7 @@
-Wadanka malya wuxuu dhaaca [[bada medatereeniyanka]]
+[[Image:EU location MLT.png|thumb|Malta]]
+[[Image:Valletta skyline.jpg|thumb|[[La Valette]]]]
+
+'''Malta''' : Wadanka malya wuxuu dhaaca [[bada medatereeniyanka]]. [[La Valette]]. [[Yurub]].
 
 [[Category:Yurub]]
 
