--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -39,7 +39,7 @@ waxaa xabsiga ka soo daayay Ethiopia janeral Caydiid.
 Waxa uu xiriir aad u wacan la leeyahay madaxda dawlad dariska nala ah ee Ethiopia.
 C/laahi yuusuf waa nin jecel kursi ma ahan nin jecel maal aduunyo. naftiisa waxuu ku badalan karaa kursi wax kastana wuu u huri karaa
 
-waa yaxye axmed siciid oo ku nool garowe
+waa yaxye axmed siciid oo ku nool [[garowe]]
 
 [[Category:Soomaaliya]]
 
