--- a/Wikipedia:Quljeed.mw
+++ b/Wikipedia:Quljeed.mw
@@ -3,3 +3,4 @@ Qulujeed waa magaalo udhaw magaalada Bon, waxaana ka soo jeeda madaxwaynaha Daah
 {{Gumud}}
 quljeed  waxa kale  oo ay  caan ku  tahay  beeraha oo  xili roobeedka si aada loo beero  beeraha oo ay ka  go anaa garawga noocyadiisa   kala duwan   iyo galaysda waliba sida xasiida  oo aad looga isticmaalo   gaar  ahaana  ayka iibiyaan baabuurta ubaxaysa  wadanka  jabuuti  
 waxa kale  oo magaaladu  markii hore  ay  biyaha ka cabi  jirtay   balayo  ama  biyo xidheeno  laakiin hada waxa biyaha  ka istic maashaa hal ceel  oo mihiima  oo ku yaala  bariga magaalada
+qore axmedqahira
