/* Maalmaha dalkeena lagu qadariyo lana xuso sanada walba waxaa ka mid ah: */

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -292,3 +292,4 @@ halka liibaanta qoryooley ay tahey wax soo saarka soomaalida meesh wax soo saar 
 [[yi:סאמאליע]]
 [[zh:索马里]]
 [[zh-min-nan:Somalia]]
+ähläm sähläm
