روبوت  إضافة: [[vo:Klad:Musig]] تعديل: [[bat-smg:Kateguorėjė:Mozėka]]

--- a/Category:Muusig.mw
+++ b/Category:Muusig.mw
@@ -8,7 +8,7 @@ Muusiga Soomaaliya
 [[ast:Categoría:Música]]
 [[az:Kateqoriya:Musiqi]]
 [[bar:Kategorie:Musik]]
-[[bat-smg:Kategorija:Mozėka]]
+[[bat-smg:Kateguorėjė:Mozėka]]
 [[be:Катэгорыя:Музыка]]
 [[be-x-old:Катэгорыя:Музыка]]
 [[bg:Категория:Музика]]
@@ -32,7 +32,7 @@ Muusiga Soomaaliya
 [[fy:Kategory:Muzyk]]
 [[ga:Catagóir:Ceol]]
 [[gd:Category:Ceòl]]
-[[gl:Category:Música]]
+[[gl:Categoría:Música]]
 [[he:קטגוריה:מוזיקה]]
 [[hr:Kategorija:Glazba]]
 [[hsb:Kategorija:Hudźba]]
@@ -40,7 +40,7 @@ Muusiga Soomaaliya
 [[hu:Kategória:Zene]]
 [[ia:Categoria:Musica]]
 [[id:Kategori:Musik]]
-[[io:Category:Muziko]]
+[[io:Kategorio:Muziko]]
 [[is:Flokkur:Tónlist]]
 [[it:Categoria:Musica]]
 [[ja:Category:音楽]]
@@ -51,7 +51,7 @@ Muusiga Soomaaliya
 [[ksh:Saachjrupp:Mussikk]]
 [[kw:Category:Ylow]]
 [[la:Categoria:Musica]]
-[[lb:Category:Musek]]
+[[lb:Kategorie:Musek]]
 [[li:Categorie:Muziek]]
 [[lmo:Category:Müsica]]
 [[lt:Kategorija:Muzika]]
@@ -70,7 +70,7 @@ Muusiga Soomaaliya
 [[os:Категори:Музыкæ]]
 [[pa:ਸ਼੍ਰੇਣੀ:ਸੰਗੀਤ]]
 [[pap:Category:Músika]]
-[[pdc:Category:Myuusick]]
+[[pdc:Kategorie:Myuusick]]
 [[pl:Kategoria:Muzyka]]
 [[pt:Categoria:Música]]
 [[rm:Category:Musica]]
@@ -93,6 +93,7 @@ Muusiga Soomaaliya
 [[uk:Категорія:Музика]]
 [[vi:Thể loại:Âm nhạc]]
 [[vls:Categorie:Muziek]]
+[[vo:Klad:Musig]]
 [[wa:Categoreye:Muzike]]
 [[war:Category:Musika]]
 [[wo:Catégorie:Misik]]
