*Empty MediaWiki Message*

--- a/Rey_mysterio.mw
+++ b/Rey_mysterio.mw
@@ -1,3 +1,2 @@
 
-
-[[Image:Rey3 WrestlemaniaRevenge.JPG|right|thumb|175px|Mysterio during a [[World Wrestling Entertainment|WWE]] [[house show]].]]
+[[Image:Rey3 WrestlemaniaRevenge.JPG|right|thumb|175px|Mysterio during a [[World Wrestling Entertainment|WWE]] [[ciyaarta loo yaqaano house show]].]]
