روبوت  إضافة: [[fiu-vro:Breinigerberg]], [[roa-tara:Breinigerberg]]

--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -24,6 +24,7 @@
 [[eo:Breinigerberg]]
 [[et:Breinigerberg]]
 [[fi:Breinigerberg]]
+[[fiu-vro:Breinigerberg]]
 [[fo:Breinigerberg]]
 [[ga:Breinigerberg]]
 [[gl:Breinigerberg]]
@@ -51,6 +52,7 @@
 [[pdc:Breinigerberg]]
 [[pt:Breinigerberg]]
 [[ro:Breinigerberg]]
+[[roa-tara:Breinigerberg]]
 [[ru:Брайнигерберг]]
 [[sco:Breinigerberg]]
 [[se:Breinigerberg]]
