--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -1,5 +1,4 @@
-Ali Mahdi Muhammad waa nin waalanNIN WAALAN OO LACAG JECEL OO DHIIG YACABA WAA SIDAA
-
+Waa nin fiican oo dalkiisa nabad la jecel
 ([[1991]]-[[1995]])
 
 [[Category:Siyaasada Soomaaliya]]
