*Empty MediaWiki Message*

--- a/Category:Bayoloji.mw
+++ b/Category:Bayoloji.mw
@@ -10,7 +10,39 @@ sidoo kale cilmiga bayloojigu waxa uu ku shaqo leeyahay barashada meesha uu ku n
 
 
    By farabadan
+_________________________________________________________________________________________
 
+
+== Bayoloji ==
+
+
+Bayolojigu waa cilmiga barashada noolaha; noolahaasi siduu doonoba ha u jiro ama ha u ekaadoe. Barashada habka uu nooluhu u shaqeeyo. Qofka baranaya cilmiga bayolojigu waa qof raba inuu wax ka ogaado sida ay waxa nooli u shaqeeyaan iyo waxa ay ka dhisan yihiin. 
+Qaybtan waxaan ku soo qaadanaynaa :
+
+'''1 Nooluhu muxuu ka samaysan yahay 
+2 Qaybaha Bayolojiga
+3 Nooloshu xaggee bey ka timid''' 
+
+ 
+
+
+ Nooluhu muxuu ka samaysan yahay.
+Nooluhu wuxuu ka samaysan yahay unugyo. Unugu waa waxa ugu yar ee waxa nooli uu ka dhisan yahay. Unuggu wuu qaybsamaa si uu u bato ama u tarmo. Unugga waxaa ku jira qalabka dhaxalka. Waxyaalaha ay nooluhu iska dhaxlaan wexey ku jiraan unugga bu´diisa. 
+
+ Qaybaha bayoolojiga
+
+
+ Noloshu xaggee bey ka timid
+Nooluhu ma aha wax ku yimid tadawur. Rabbi ayaa abuuray/khalqay.
+Nooluha dhammaantiis waxaa abuuray Alle wax walba kara. 
+Nooluhu ma aha wax iska yimid oon la garanaynin meesha uu ka yimid.
+Dadku wexey ka yimaadeen Aadam, nebi Aadan. Aadanna waxaa laga sameeyey ciid.
+Dhirta Allaa khalqay ee iskama iman.
+Noolaha dhammaantiis ujeeddo ayaa Alle u khalqay. Ujeedadaasina waa iney ogaadaan inuu Alle wax abuuraa uu jiro. Isagaasna ay caabudaan.
+Unugga Allaa khalqay, amar Allena waa ku shaqeeyaa.
+
+
+_________________________________________________________________________________________
 [[fr:Catégorie:Biologie]]
 [[ga:Catagóir:Bitheolaíocht]]
 [[gd:Category:Bith-eòlas]]
