روبوت  تعديل: [[id:Kekristenan]]

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -826,7 +826,7 @@ Ugu dambayntiina waxaan akhristow kugu boorrinayaa inay towbaddu weli kuu furan 
 [[hu:Kereszténység]]
 [[hy:Քրիստոնեություն]]
 [[ia:Christianismo]]
-[[id:Kristen]]
+[[id:Kekristenan]]
 [[ig:Christianity]]
 [[ilo:Cristianidad]]
 [[io:Kristanismo]]
