روبوت  إضافة: [[be-x-old:Катэгорыя:Самалі]]

--- a/Category:Soomaaliya.mw
+++ b/Category:Soomaaliya.mw
@@ -4,6 +4,7 @@
 
 [[an:Categoría:Somalia]]
 [[ar:تصنيف:صومال]]
+[[be-x-old:Катэгорыя:Самалі]]
 [[bg:Категория:Сомалия]]
 [[bs:Kategorija:Somalija]]
 [[ca:Categoria:Somàlia]]
@@ -20,13 +21,13 @@
 [[fa:رده:سومالی]]
 [[fi:Luokka:Somalia]]
 [[fr:Catégorie:Somalie]]
-[[gl:Category:Somalia]]
+[[gl:Categoría:Somalia]]
 [[he:קטגוריה:סומליה]]
 [[hr:Kategorija:Somalija]]
 [[hsb:Kategorija:Somalia]]
 [[hu:Kategória:Szomália]]
 [[id:Kategori:Somalia]]
-[[io:Category:Somalia]]
+[[io:Kategorio:Somalia]]
 [[is:Flokkur:Sómalía]]
 [[it:Categoria:Somalia]]
 [[ja:Category:ソマリア]]
