روبوت  إضافة: [[bi:Breinigerberg]], [[roa-rup:Breinigerberg]]

--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -14,6 +14,7 @@
 [[az:Breinigerberg]]
 [[bar:Breinigerberg]]
 [[bat-smg:Brainigerbergs]]
+[[bi:Breinigerberg]]
 [[bs:Breinigerberg]]
 [[ca:Breinigerberg]]
 [[chy:Breinigerberg]]
@@ -52,6 +53,7 @@
 [[pdc:Breinigerberg]]
 [[pt:Breinigerberg]]
 [[ro:Breinigerberg]]
+[[roa-rup:Breinigerberg]]
 [[roa-tara:Breinigerberg]]
 [[ru:Брайнигерберг]]
 [[sco:Breinigerberg]]
