روبوت  إضافة: [[be-x-old:Катэгорыя:Гарады Самалі]], [[ro:Categorie:Oraşe în Somalia]]

--- a/Category:Magaalooyinka_Soomaaliya.mw
+++ b/Category:Magaalooyinka_Soomaaliya.mw
@@ -1,6 +1,7 @@
 [[Category:Juquraafiga Soomaaliya]]
 
 [[ar:تصنيف:مدن الصومال]]
+[[be-x-old:Катэгорыя:Гарады Самалі]]
 [[cs:Kategorie:Města v Somálsku]]
 [[da:Kategori:Byer i Somalia]]
 [[de:Kategorie:Ort in Somalia]]
@@ -18,6 +19,7 @@
 [[no:Kategori:Byer i Somalia]]
 [[pl:Kategoria:Miasta Somalii]]
 [[pt:Categoria:Cidades da Somália]]
+[[ro:Categorie:Oraşe în Somalia]]
 [[sk:Kategória:Mestá v Somálsku]]
 [[sw:Category:Miji ya Somalia]]
 [[zh:Category:索马里城市]]
