روبوت  إضافة: [[ts:Democratic Republic of the Congo]]

--- a/Jamhuuriyada_Dimuqaraadiga_Kongo.mw
+++ b/Jamhuuriyada_Dimuqaraadiga_Kongo.mw
@@ -90,6 +90,7 @@
 [[th:สาธารณรัฐประชาธิปไตยคองโก]]
 [[tl:Demokratikong Republika ng Congo]]
 [[tr:Demokratik Kongo Cumhuriyeti]]
+[[ts:Democratic Republic of the Congo]]
 [[uk:Демократична Республіка Конго]]
 [[uz:Kongo Demokratik Respublikasi]]
 [[vec:Republica Democratica del Congo]]
