*Empty MediaWiki Message*

--- a/Cabdiqaasim_Salaad.mw
+++ b/Cabdiqaasim_Salaad.mw
@@ -1,3 +1,15 @@
+{{stub}}
+
+[[Image:Abdiqassim Salad Hassan 1.jpg|thumb|Cabdiqaasim Salaad Xassan]]
+
 Cabdi Qaasin Salaad Booy waa nin ku qamaaray faras qaldan. Wuxuu sartay rajadiisi oo dhan qabil juhala ah oo la yiraah Ceeyr "Ceeyr Talo Xume" oo ismooday wixii tuuganimada lagu keenay in lagu sharciyeesano karo hadii gar dheer la deeysto.
 
 Manta qori amxaar ayeey hoos fadhiyaan wixii aay somaali ka galeena ayaa tartiib looga jeeba.
+
+[[Category:Soomaaliya]]
+
+[[cs:Abdiqasim Salad Hassan]]
+[[de:Abdikassim Salat Hassan]]
+[[en:Abdiqasim Salad Hassan]]
+[[ja:アブディカシム・サラ・ハッサン]]
+[[sv:Abdiqasim Salad Hassan]]
