[[fr:Rey Mysterio]]

--- a/Rey_mysterio.mw
+++ b/Rey_mysterio.mw
@@ -1,2 +1,5 @@
+{{gumud}}
 
 [[Image:Rey3 WrestlemaniaRevenge.JPG|right|thumb|175px|Mysterio during a [[World Wrestling Entertainment|WWE]] [[ciyaarta loo yaqaano house show]].]]
+
+[[fr:Rey Mysterio]]
