--- a/Bilaha.mw
+++ b/Bilaha.mw
@@ -60,7 +60,9 @@ Sanadka miilaadiyada wuxuu ka koobanyahay 12 biloood. Macagyada bilahaas dhnaka 
 [[ka:თვე]]
 [[kg:Ngonda (manaka)]]
 [[kk:Ай]]
+[[kl:Qaammat]]
 [[kn:ತಿಂಗಳು]]
+[[ko:달 (시간)]]
 [[ksh:Moohnd (Kalländo)]]
 [[kw:Mis]]
 [[la:Mensis]]
