--- a/Kurów.mw
+++ b/Kurów.mw
@@ -39,7 +39,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[cu:Кѹровъ]]
 [[cv:Курув]]
 [[cy:Kurów]]
-[[da:Kurów]]
+[[da:Kurów (ved Puławy)]]
 [[de:Kurów]]
 [[diq:Kurów]]
 [[dv:ކުރޫފް]]
