*Empty MediaWiki Message*

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -2,6 +2,11 @@
 
 '''Islam''' ([[Luuqada Carabiga|Arabic]]: {{Audio|ar-al_islam.ogg|الإسلام; ''al-'islām''}}). K u dhawaad muslimiinta caalamka oo dhan waxey yihiin  [[sunni]] [[ Shi'a]]
 
+<!-- [[Image:Holy quran cover.gif|right|thumb|150 px|Cover ornamentation with ''Al-Qur'ān Al-Karīm'' calligraphy]] -->
+[[Image:Arabic Plaque, Great Mosque, Xian.jpg|thumb|220px|right|Islam's basic creed (''[[shahadah]]'') written on a plaque in the [[Great Mosque of Xi'an]], [[China]]]]
+[[Image:Kabaa.jpg|thumb|right|220px|Rituals of the [[Hajj]] (pilgrimage) include walking seven times around the [[Kaaba]] in Mecca.]]
+
+
 Eebbe nasahnaa oo korreeye wuxuu yidhi:-" Waxaa ka cabsada Ilaahay addoomadiisa aqoonta leh, Ilaahayna waa adkaade dambidhaafe ah" Suuradda Faadir qayb ka mid ah aaayadda 28aad. 
 
 Nabigeeniina naxariis iyo nabadgalyo Eebbe korkiisa ahaataye wuxuu yidhi:- "Ka uu la doonayo Ilaahay khayr ,wuxuu baraa diinta" Bukhari iyo Muslim ayaa wariyay.
@@ -101,96 +106,6 @@ Labadaa tiir ee Islaamka iyo Iimaanka rumayntooda iyo ku dhaqankoodu  waxay addo
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 = Siirada Rasuulka Mohamed SWC ==
 
 NASABKII RASUULKA SCW 
@@ -283,9 +198,7 @@ Sidoo kale Ilaah way rumeysnaayeen, sida marka la yidhaahdo yaa abuuray cirka iy
 
 == Tixraaca Qoraalka ==
 
-Waxaa marka hore leh mahad eebe marka labaadna qoraagii qoraalkaan qoray Osman Bilad 
-osmanbilad@hotmail.com,  
-[Somaltalk.com]
+
 
 [[Category:Islaam]]
 
