--- a/Islaam.mw
+++ b/Islaam.mw
@@ -4,7 +4,7 @@
 
 <!-- [[Image:Holy quran cover.gif|right|thumb|150 px|Cover ornamentation with ''Al-Qur'ān Al-Karīm'' calligraphy]] -->
 [[Image:Arabic Plaque, Great Mosque, Xian.jpg|thumb|220px|right|Islam's basic creed (''[[shahadah]]'') written on a plaque in the [[Great Mosque of Xi'an]], [[China]]]]
-[[Image:Kabaa.jpg|thumb|right|220px|Rituals of the [[Hajj]] (pilgrimage) include walking seven times around the [[Kaaba]] in Mecca.]]
+[[Image:Kabaa.jpg|thumb|right|220px|Xajka oo kuyaalo sacuudi carabia waxuu ka mid yahay shanta tiir ee islaamka.]]
 
 
 Eebbe nasahnaa oo korreeye wuxuu yidhi:-" Waxaa ka cabsada Ilaahay addoomadiisa aqoonta leh, Ilaahayna waa adkaade dambidhaafe ah" Suuradda Faadir qayb ka mid ah aaayadda 28aad. 
