*Empty MediaWiki Message*

--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -14,10 +14,10 @@
 
 
 
-
 {{otheruses|Shahada (disambiguation)}}
 {{Islam}}
- '''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}  ''{{ArabDIN|aš-šahādah}}'' {{Audio|ar_shahadah.ogg|audio}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy .shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta islaamka waxaana weeye tiirk koowad oo ah shadah 
+ '''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}  ''{{ArabDIN|aš-šahādah}}'' {{Audio|ar_shahadah.ogg|audio}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
+shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta islaamka waxaana weeye tiirk koowad oo ah shadah 
 
 
 == Akhrinta ==
