--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -13,7 +13,6 @@
 
 
 
-
 {{otheruses|Shahada (disambiguation)}}
 {{Islam}}
  '''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}  ''{{ArabDIN|aš-šahādah}}'' {{Audio|ar_shahadah.ogg|audio}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
@@ -30,3 +29,5 @@ I testify that there is no god (ilah) but God (Allah), and I testify that] Muham
 Waxaan qirayaa in uusan jirin ilaah ilaa hmooye, waxana qirayaa in uu nabi muxamed yahay rasuulkii alle.
 
 [[Image:Shahadah.jpg|thumb|left|100px|Shahadah {{Audio|ar_shahadah.ogg|audio}}]]
+
+[[Image:Flag of Jihad.svg|thumb|left|200px|Flag featuring the first [[Kalimah]], the Shahadah]]
