--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -11,7 +11,6 @@
 
 
 
-
 {{otheruses|Shahada (disambiguation)}}
 {{Islam}}
  '''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}  ''{{ArabDIN|aš-šahādah}}'' {{Audio|ar_shahadah.ogg|audio}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
@@ -29,4 +28,4 @@ Waxaan qirayaa in uusan jirin ilaah ilaa hmooye, waxana qirayaa in uu nabi muxam
 
 [[Image:Shahadah.jpg|thumb|left|100px|Shahadah {{Audio|ar_shahadah.ogg|audio}}]]
 
-[[Image:Flag of Jihad.svg|thumb|left|200px|Flag featuring the first [[Kalimah]], the Shahadah]]
+[[Image:shahadah]]
