*Empty MediaWiki Message*

--- a/Dhahar.mw
+++ b/Dhahar.mw
@@ -32,4 +32,6 @@ Qof bartaa jecelaa!!!
 
 by Colonel Maxamud C. Fooldhuub)'''
 
+Xigasho: wwww.dhahar.com
+
 Diyaariye: Abdiqadir Ahmed Ibrahim Birjeb
