--- a/Diseembar.mw
+++ b/Diseembar.mw
@@ -127,6 +127,7 @@ Sanadka miilaadiga [[bil|bishiisa]] toban iyo labaad ahna bisha ugu dambeyso san
 [[vo:Dekul]]
 [[wa:Decimbe]]
 [[war:Disyembre]]
+[[xh:Eyomnga]]
 [[yi:דעצעמבער]]
 [[zh:12月]]
 [[zh-min-nan:12 goe̍h]]
