/* Waqtiga xaadirka ah */

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -13,7 +13,7 @@ Qabiilada daga Waqooyiga somalia ama somalialnd
 Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliland]] markaa [[1960]] ayay hoos yimaadeer maamulkii soomaliya. intaa kadib [[1984]]kii ayay ku dhawaaqeen jabhadii [[SNM]] ( somali national movement ) jabhadani waxa ay la dagaalantay kaligii taliskii [[siyaad barre]]. 
 jabhadan oo markii [[xukuumadii soomaliya ay dhacday]] xilka la wareegtay woqooyiga soomaliya oo dhan la wareegtay ha ka hor yimaadaan jabhadihii beelaha soomalida woqooyiga sida jabhadii [[SDA]] ( somali Democratic Allience ) ee matalaysay qabiilka [[samaroon]], laakiin khilaafka waxa lagu xaliyay shirkii [[boorama]] ee lagu asaasay xukuumada [[soomaalilaand]]. 
 
-Isaaqa waxa uugu laan dheeraysan qabiilka loo yaqaan habar Awal siiba Reer Gadiid.  Inta kaloo dhami waa reer miyi ka yimi Xaraf iyo Calaydh
+Isaaqa waxa uugu laan dheeraysan qabiilka loo yaqaan habar Awal siiba Reer Gadiid.  Inta kaloo dhami waa reer miyi ka yimi Xaraf iyo Calaydh siba dadka degan Magaalada Bristol ee ku taala wadanka England.
  SIYAASADA
 
 
