/* Waqtiga xaadirka ah */

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -15,9 +15,10 @@ jabhadan oo markii [[xukuumadii soomaliya ay dhacday]] xilka la wareegtay woqooy
 
 
 
-1.maxamed haji ibrahim ciga(madax waynihii ugu horeeyey e somaliland)
-2.ismaciil hure buubaa (wasiirka  waxbarashad  dowlasda somalia)
-3.ahmed maxamed maxamuud (siilaanyo) gudomiyaha xisbiga KULMIYE.
-4.Faysal cali waraabe gudoomiyaha xisbiga siyaasiga   UCID.
-5.adna adan ismacil wasiirkii hore e arimaha dibada somliyeed.
-6.maxamud ahmed ali abihi waxbarashada somaliyeed
+1.cabdirahmaan ahmed cali (madaxweynihii ugu horeeyey e somaliland ahaana gudoomiyihii ururka snm)
+2.maxamed haji ibrahim ciga(madax waynihii labaad e somaliland)
+3.ismaciil hure buubaa (wasiirka  waxbarashad  dowlasda somalia)
+4.ahmed maxamed maxamuud (siilaanyo) gudomiyaha xisbiga KULMIYE.
+5.Faysal cali waraabe gudoomiyaha xisbiga siyaasiga   UCID.
+6.adna adan ismacil wasiirkii hore e arimaha dibada somliyeed.
+7.maxamud ahmed ali abihi waxbarashada somaliyeed
