روبوت  إضافة: [[wo:Internet]]

--- a/Internet.mw
+++ b/Internet.mw
@@ -138,6 +138,7 @@ Magaca [[internet]] wuxuu ka yimid ereyga '''''inter'''connection'' '''''net'''w
 [[vls:Internet]]
 [[vo:Vüresod]]
 [[wa:Daegntoele]]
+[[wo:Internet]]
 [[yi:אינטערנעט]]
 [[zh:互联网]]
 [[zh-min-nan:Internet]]
