روبوت  تعديل: [[als:Kurów]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -6,7 +6,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 
 [[ab:Курув]]
 [[af:Kurów]]
-[[als:Kurau]]
+[[als:Kurów]]
 [[am:ኩሩቭ]]
 [[an:Kurów]]
 [[ang:Kurów]]
