--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -12,9 +12,10 @@ Madaxweyneyaashii Somaliland :
 
 ----
 
-== Gobolada Somaliland ==
-
-somaliland waxa ay ka koobanthay lix gobol oo kala ah [[Awdal]] [[Hargaysa]] Saaxil, sanaag, sool iyo  Togdheer.
+==  waxaan odhan lahayn somaliland maaha dowlad goboleed ee waa dal ka go'ay somalia mana aha sida maamul goboleedka puntland markaa waxaan odhan lahaa halka bilowga ay ku qorantahay somaliland waa maamul goboleed in lagu bedelo somaliland waa dowlad ka go'day somalia laakiin aan wali caalamka wad ictitiraafa kal helin 
+sidaa iyo nabad galyo
+contact me if you want say116@hotmail.com
+hargeisa somaliland
 
 == maalmaha laga xuso somaliland ==
 1-26 juun oo ah maalinta ay ka qadatay xornimada gumaysigii ingiriiska.
