/* Waqtiga xaadirka ah */

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -8,17 +8,5 @@ Irir Samaale ayaa loo yaqaan Dirta, Hawiyaha iyo Raxanweeynta. Isaaqu wuxuu ka m
 Dad badan oo wax garan ayaa ku caaya isaaqa in uu yahay Yuhuud, marna waxaa lagu sheegaa in eey yihiin carab. ISaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
 
 Qabiilada daga Waqooyiga somalia ama somalialnd
-== Waqtiga xaadirka ah == 
-
-Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliland]] markaa [[1960]] ayay hoos yimaadeer maamulkii soomaliya. intaa kadib [[1984]]kii ayay ku dhawaaqeen jabhadii [[SNM]] ( somali national movement ) jabhadani waxa ay la dagaalantay kaligii taliskii [[siyaad barre]]. 
-jabhadan oo markii [[xukuumadii soomaliya ay dhacday]] xilka la wareegtay woqooyiga soomaliya oo dhan la wareegtay ha ka hor yimaadaan jabhadihii beelaha soomalida woqooyiga sida jabhadii [[SDA]] ( somali Democratic Allience ) ee matalaysay qabiilka [[samaroon]], laakiin khilaafka waxa lagu xaliyay shirkii [[boorama]] ee lagu asaasay xukuumada [[soomaalilaand]]. 
-
-
-
-1.cabdirahmaan ahmed cali (madaxweynihii ugu horeeyey e somaliland ahaana gudoomiyihii ururka snm)
-2.maxamed haji ibrahim ciga(madax waynihii labaad e somaliland)
-3.ismaciil hure buubaa (wasiirka  waxbarashad  dowlasda somalia)
-4.ahmed maxamed maxamuud (siilaanyo) gudomiyaha xisbiga KULMIYE.
-5.Faysal cali waraabe gudoomiyaha xisbiga siyaasiga   UCID.
-6.adna adan ismacil wasiirkii hore e arimaha dibada somliyeed.
-7.maxamud ahmed ali abihi waxbarashada somaliyeed
+isaaq waa qabiilka labaad ee igu badan somalida isaqau waxa u daga waqoyiga waxana ay asal ahaan ka imadeen carbta shixisaq waxa u ka imi carab si u soamlida o dhan u baro wax rer shixi saxaaq wa rerha ugu aqonta iyo daganashah badan somalida waxa ay dagan melo badan lakin asal ahan waxay ad u dagan yihiin waqoyi galbeed rer shixi saq waa rerka kaliya o aan la gumaysan ilaa laga rebo ingiriski o waqti haystay ka dib ay ku amiri jireen in aan nagta uk u dhaltay anay ku dhalin wadanka somaliland waa rer ad u nabad jecal waxay ka gursadaan darodka iyo samronka iyo cisaa waa dadka asalk aha ugu qurxada badan somalida kale waxana ay u kala baxaan 
+[habaryonis habar awal habar jecalo ayuub toljecalo iyo arab }
