--- a/Kurów.mw
+++ b/Kurów.mw
@@ -61,6 +61,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[ga:Kurów]]
 [[gd:Kurów]]
 [[gl:Curóv - Kurów]]
+[[glk:کوروۆ]]
 [[got:𐌺𐌿𐍂𐍉𐍅]]
 [[gu:કુરોવ]]
 [[gv:Kurów]]
