--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -1,30 +1,16 @@
+[[Image:Shahadah.jpg|thumb|Shahadah]]
 
+[[Image:Flag of Jihad.svg|thumb|Flag featuring the first [[Kalimah]], the Shahadah]]
 
-
-
-
-
-
-
-
-
-
-
-{{otheruses|Shahada (disambiguation)}}
-{{Islam}}
- '''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}}  ''{{ArabDIN|aš-šahādah}}'' {{Audio|ar_shahadah.ogg|audio}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
-shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta islaamka waxaana weeye tiirk koowad oo ah shadah 
-
+'''Shahadah''' ([[luuqada carabiga]]: {{lang|ar|الشهادة}},shahadah waxa weeye qrista ilaahay in uu yahay hal kaliya waaxid maba tawxis ka oo ah qirista ilaahy.
+shahadah waxey ka mid tahay shanta tiir oo ugu muhiimsan diinta islaamka waxaana weeye tiirk koowad oo ah shadah.
 
 == Akhrinta ==
 
+أشهد أن لا إله إلاَّ الله و أشهد أن  محمد رسول الله (luuqada carabiga)
 
-أشهد أن لا إله إلاَّ الله و أشهد أن  محمد رسول الله((luuqada carabiga))
-
-I testify that there is no god (ilah) but God (Allah), and I testify that] Muhammad is the messenger of God((English))
+I testify that there is no god (ilah) but God (Allah), and I testify that] Muhammad is the messenger of God (English) 
 
 Waxaan qirayaa in uusan jirin ilaah ilaa hmooye, waxana qirayaa in uu nabi muxamed yahay rasuulkii alle.
 
-[[Image:Shahadah.jpg|thumb|left|100px|Shahadah {{Audio|ar_shahadah.ogg|audio}}]]
-
-[[Image:Flag of Jihad.svg|thumb|left|200px|Flag featuring the first [[Kalimah]], the Shahadah]]
+[[fr:Chahada]]
