--- a/Shahaadah.mw
+++ b/Shahaadah.mw
@@ -13,4 +13,6 @@ I testify that there is no god (ilah) but God (Allah), and I testify that] Muham
 
 Waxaan qirayaa in uusan jirin ilaah ilaa hmooye, waxana qirayaa in uu nabi muxamed yahay rasuulkii alle.
 
+[[Category:Islaam]]
+
 [[fr:Chahada]]
