[[fr:Ibn Taymiyyah]]

--- a/Imaam_Mujtahid_Sheykhul-Islaam.mw
+++ b/Imaam_Mujtahid_Sheykhul-Islaam.mw
@@ -1,6 +1,5 @@
 Taariikh-nololeedkii sheekhii Muslimiinta Ibna Taymiya
 
-
 == Imaam Mujtahid Sheykhul-Islaam ==
 
 === Dhalashadiisii ===
@@ -33,3 +32,5 @@ Wuxuu geeriyoodey Eebbe ha u naxariistee habeen isniin ah bishuna ay ahayd labaa
 '''Qore:''' CabdiRisaaq Maxamed Cilmi
 
 [[category:Islaam]]
+
+[[fr:Ibn Taymiyyah]]
