--- a/Samaroon.mw
+++ b/Samaroon.mw
@@ -1,4 +1,4 @@
-Samaroon ama [[gadabuursi]] waa beel ka mid ah beelaha soomaliyeed ee daga woqooyiga iyo galbeedka dhulka soomalida. Qabiilkani waxa uu daga [[soomaaliya]] iyo [[ogaadeeniya]] iyo [[djibouti]].
+Samaroon ama [[gadabuursi]] waa beel ka mid ah beelaha soomaliyeed ee daga woqooyiga iyo galbeedka dhulka soomalida. Qabiilkani waxa uu daga [[soomaaliya]] iyo [[Itoobiya]] iyo [[djibouti]].
 Samaroonku waxa ay ka tafiirmaan sheekh samaroon oo magaciisu ahaa maxamuud. Beesha samaroon waxa ay ka mid tahay beelaha [[Dir]] ee soomaliyeed. 
 Beesha samaroon waxa ay u qabysantaa
 *[[makaahiil]]
