*Empty MediaWiki Message*

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -1,12 +1,11 @@
 [[Image:Somalia ethnic grps 2002.jpg|thumb|300px|[[Qabaa'ilka Soomaaliya]]]]
 
-Isaaqu waa qabilka afraad ee somaliyeed waxa uu degaa waqooyiga .Isaaq wexeey ka soo jeedaan sheekh isaxaaq oo ka imaadey carabta ka imaadey siduu dadka waqooyiga ee beriga 13ad joogey diinta islaamka baro dadkaasi magacooda wuxuu ahaa oromo waxa xiligaas sheekh isaaq macalinkiisa ahaa sheekh [[samaroon]] oo isagu markii ay mudo joogeen geeriyooday xilkiina u igmaday isxaaq, waxa kale oo wehelinayay iyagana ciise. sadexduba waxay ku aasanyihiin xiis.
+Isaaqu waa qabilka afraad ee somaliyeed waxa uu degaa waqooyiga .Isaaq wexeey ka soo jeedaan sheekh isaxaaq oo ka yimid carabta siduu dadka waqooyiga ee qanriga 13ad joogey diinta islaamka baro dadkaasi magacooda wuxuu ahaa oromo waxa xiligaa woqooyiga soomaaliya ku noolaa sheekh [[Samaroon]] iyo sheekh ciise.
 
  
-isaaq waa qabiil soomaaliyeed, oo daga meelo badan, gaar ahaan waqooyiga dalka soomaaliya (somaliland)
-Irir Samaale ayaa loo yaqaan Dirta, Hawiyaha iyo Raxanweeynta. Isaaqu wuxuu ka mid yahay Dir.
-Dad badan oo wax garan ayaa ku caaya isaaqa in uu yahay Yuhuud, marna waxaa lagu sheegaa in eey yihiin carab. ISaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
+Isaaq waa qabiil soomaaliyeed, oo daga waqooyiga dalka soomaaliya (somaliland).
+Irir Samaale ayaa loo yaqaan Dirka iyo Hawiyaha . Isaaqu wuxuu ka mid yahay Dir.
+Dad badan oo wax garan ayaa ku caaya Isaaqa in uu yahay Yuhuud, sababtoo ah in boqortooyo Yuhuud ah oo dad loo yaqaan [[yibir]] ay ka talin jireen deeganada beelaha Isaaq,  marna waxaa lagu sheegaa in eey yihiin carab. Isaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
 
-Qabiilada daga Waqooyiga somalia ama somalialnd
-isaaq waa qabiilka labaad ee igu badan somalida isaqau waxa u daga waqoyiga waxana ay asal ahaan ka imadeen carbta shixisaq waxa u ka imi carab si u soamlida o dhan u baro wax rer shixi saxaaq wa rerha ugu aqonta iyo daganashah badan somalida waxa ay dagan melo badan lakin asal ahan waxay ad u dagan yihiin waqoyi galbeed rer shixi saq waa rerka kaliya o aan la gumaysan ilaa laga rebo ingiriski o waqti haystay ka dib ay ku amiri jireen in aan nagta uk u dhaltay anay ku dhalin wadanka somaliland waa rer ad u nabad jecal waxay ka gursadaan darodka iyo samronka iyo cisaa waa dadka asalk aha ugu qurxada badan somalida kale waxana ay u kala baxaan 
-[habaryonis habar awal habar jecalo ayuub toljecalo iyo arab }
+Qabiilada daga Waqooyiga somalia ama somaliland
+isaaq waa qabiilka labaad ee igu badan somaliland isaaqu waxa uu daga waqoyiga waxana ay asal ahaan ka imadeen carbta sheekh Isaaq waxa u ka yimid carabta. isaxaaq wa reerha ugu daganashah badan somalida waxa ay dagan melo badan lakin asal ahan waxay ad u dagan yihiin waqoyi galbeed rer shixi saq waa rerka kaliya o aan la gumaysan ilaa laga rebo ingiriski iyo boqortooyadii Yibir.
