--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -5,7 +5,7 @@ Isaaqu waa qabilka afraad ee somaliyeed waxa uu degaa waqooyiga .Isaaq wexeey ka
  
 Isaaq waa qabiil soomaaliyeed, oo daga waqooyiga dalka soomaaliya (somaliland).
 Irir Samaale ayaa loo yaqaan Dirka iyo Hawiyaha . Isaaqu wuxuu ka mid yahay Dir.
-Dad badan oo wax garan ayaa ku caaya Isaaqa in uu yahay Yuhuud, sababtoo ah in boqortooyo Yuhuud ah oo dad loo yaqaan [[yibir]] ay ka talin jireen deeganada beelaha Isaaq,  marna waxaa lagu sheegaa in eey yihiin carab. Isaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
+Dad badan oo wax garan ayaa ku caaya Isaaqa in uu yahay Yuhuud, sababtoo ah in boqortooyo Yuhuud ah oo dad loo yaqaan Yibir ay ka talin jireen deeganada beelaha Isaaq,  marna waxaa lagu sheegaa in eey yihiin carab. Isaaqu wuxuu u kala baxaa (garxajis, habar awal, habar jeclo, ayoup iyo arab)
 
 Qabiilada daga Waqooyiga somalia ama somaliland
 isaaq waa qabiilka labaad ee igu badan somaliland isaaqu waxa uu daga waqoyiga waxana ay asal ahaan ka imadeen carbta sheekh Isaaq waxa u ka yimid carabta. isaxaaq wa reerha ugu daganashah badan somalida waxa ay dagan melo badan lakin asal ahan waxay ad u dagan yihiin waqoyi galbeed rer shixi saq waa rerka kaliya o aan la gumaysan ilaa laga rebo ingiriski iyo boqortooyadii Yibir.
