*Empty MediaWiki Message*

--- a/Awdal.mw
+++ b/Awdal.mw
@@ -19,26 +19,26 @@ image_location = Somalia_regions_map_Awdal.svg|
 }}
 
 Awdal waa gobol ka mid ah [[:Category:Gobolada Soomaaliya|Gobolada]] [[Soomaaliya]] wuxuuna ku yaalaa woqooyiga-galbeed Soomaaliya. 
-Hadda waxa uu ku tirsanyahay jamhuuriyada lamagac baxday [[somaliland]]. Gobolkan waa gobol taariikh dheer leh, horana loo yaqaanay [[Adal]].Gobolkan waa gobolada ugu horumarsan woqooyiga somalia gaar ahaan somaliland xag dhaqaale, waxbarsho, diineed iyo isgaadhsiineedba. gobolkani waa gobolka kaliye ee aan dagaalada sokeeye ee ka dhacay soomaliya oo dhani aynay saamayn marka laga reebo magaalada [[Dila]] oo jabhada SNM ay burburisay 1991 mooyaane. Gobolkan waxa lagu asaasay Jamhuuriyada somaliland, xagaas oo dhamaan xubnaha taliska lagu soo dhisay aynay daganayeen magaala madaxdiisa [[Boorame]] mudo shan bilood ah xagaasna lagu soo magacaabay madaxwaynihii u horeeyay ee la doorto Alaha u naxariistee marxuum [[Maxamed Xaaji Ibraahim Cigaal]]. 
+Hadda waxa uu ku tirsanyahay jamhuuriyada lamagac baxday [[somaliland]]. Gobolkan waa gobol taariikh dheer leh, horana loo yaqaanay [[Cadal]]. Gobolkan waa gobolada ugu horumarsan woqooyiga somalia gaar ahaan somaliland xag dhaqaale, waxbarsho, diineed iyo isgaadhsiineedba. gobolkani waa gobolka kaliye ee aan dagaalada sokeeye ee ka dhacay soomaliya oo dhani aynay saamayn marka laga reebo magaalada [[Dila]] oo jabhada SNM ay burburisay 1991 mooyaane. Gobolkan waxa lagu asaasay Jamhuuriyada somaliland, xagaas oo dhamaan xubnaha taliska lagu soo dhisay aynay daganayeen magaala madaxdiisa [[Boorama]] mudo shan bilood ah xagaasna lagu soo magacaabay madaxwaynihii u horeeyay ee la doorto Alaha u naxariistee marxuum [[Maxamed Xaaji Ibraahim Cigaal]]. 
 Gobolka awdal waa gobol dhaqaalihiisu aad ugu tiirsanyahay xoolaha nool, Beeraha, dalxiiska iyo macdanta. Gobolkan waxa ka soo jeeda madaxwaynaha haatan haya xilka jamhuuriyada somaliland ee [[Daahir Rayaale Kaahin]]. 
  
 
 == Degmooyinka gobolka Awdal ee soomaaliya (haatan somaliland) ==
 
 * [[Baki]]
-* [[Boorame]]
-* [[Saylac]]
-* [[Lug haya]]
 * [[Boon]]
-* [[Qulujeed]]
-* [[Garoyacowl]]
+* [[Boorama]]
 * [[Xariirad]]
-* [[Geerisa]]
-* [[Libaaxley]]
 * [[Dila]]
+* [[Saylac]]
+* [[Goroyacowl]]
+* [[Geerisa]]
+* [[Qulujeed]]
+* [[Libaaxley]]
+* [[Lughaya]]
 
 
-Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku tiirsanyahay ganacsiga iyo xoolaha nool. Magaalo madaxdiisii hore waxa ay ahaan jirtay [[Baki]].
+Gobolkan waxaa magaala madaxdiisu tahay [[Boorama]] dhaqaalihiisuna waxa uu ku tiirsanyahay ganacsiga iyo xoolaha nool. Magaalo madaxdiisii hore waxa ay ahaan jirtay [[Baki]].
 
 {{Gobolada_Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
@@ -46,7 +46,7 @@ Gobolkan waxaa magaala madaxdiisu tahay [[Boorame]] dhaqaalihiisuna waxa uu ku t
 == Dhibaatooyinka xuduudiga ah ==
 Gobolkan awdal waxa uu xuduud la leeyahay gobolka maroodi jeex ( Hargeisa ) iyo dalalka ethiopia iyo jabuuti. Intaba waxa ka haysta dhibaatooyin xuduudi ah oo aad u kulul.
 *Hargaysa
-gobolka hargaysa waxa ay isku qabsadeen dagmooyin xiligii doorashooyinka wakiilada, arintaasi oo markii danbe golaha guurtida iyo wakiiladu si afduubasho ah ugu magacaabeen gobolka hargaysa. dadka adagaanadaas dagan oo ka soo jeeda dhamaan beelaha [[maxad case]] ee [[samaroon]] iyo in yar oo [[reer nuur]] ayaa arintaasi aad u kicisay. sidoo kale waxa beelaha [[reer nuur]]([[samaroon]]) iyo beelaha [[sacad muuse]] ([[isaaq]]) ay isku qabsadeen dhulalka banka ee [[wajaale]] arintaasi oo markii ugu danbaysay gaadhay heer la is xabadeeyo hadan xukuumada somaliland ay eeda saartay beesha [[reer nuur]] loona xidhay afartan dagaalyahan oo [[reer nuur]] iyaga iyo hubkoodii fududaa oo ahaa 40 [[AK-47]] iyo shan mbk. arintaasi oo uu qaboojiyay madaxwaynuhu markii uu cuqaasha reer nuur ku qanciyay markale ee i ixtiraama. 
+gobolka hargaysa waxa ay isku qabsadeen dagmooyin xiligii doorashooyinka wakiilada, arintaasi oo markii danbe golaha guurtida iyo wakiiladu si afduubasho ah ugu magacaabeen gobolka hargaysa. dadka adagaanadaas dagan oo ka soo jeeda dhamaan beelaha [[maxad case]] ee [[Samaroon]] iyo in yar oo [[Reer Nuur]] ayaa arintaasi aad u kicisay. sidoo kale waxa beelaha [[Reer Ruur]]([[samaroon]]) iyo beelaha [[sacad muuse]] ([[isaaq]]) ay isku qabsadeen dhulalka banka ee [[wajaale]] arintaasi oo markii ugu danbaysay gaadhay heer la is xabadeeyo hadan xukuumada somaliland ay eeda saartay beesha [[reer nuur]] loona xidhay afartan dagaalyahan oo [[reer nuur]] iyaga iyo hubkoodii fududaa oo ahaa 40 [[AK-47]] iyo shan mbk. arintaasi oo uu qaboojiyay madaxwaynuhu markii uu cuqaasha reer nuur ku qanciyay markale ee i ixtiraama. 
 arintan iyo kuwa kale oo badan waxa si wanaagsan loogu xusay aragtida [[awdalaynta]] ee ay soo saareen aqoonyahanada [[dharaar institite]].
 
 [[ar:أودل]]
