*Empty MediaWiki Message*

--- a/Libaaxley.mw
+++ b/Libaaxley.mw
@@ -1,6 +1,6 @@
 Libaaxley waa Buur ka mid ah buuraha ugu caansan gobolka [[Awdal]] ee Jamhuuriyda [[Somaliya]]
 waa halka Buuraha iyo Banka geriyaad iska galaan
-waa buur [[Taariikh]] dheer ku leh deegaanka waxyna ku caan baxday Ugadha kala duwan
+waa buur [[Taariikh]] dheer ku leh deegaanka waxyna ku caan baxday Ugaadha kala duwan
 waxaana  yimid [[1962]] Aden cadde, [[1967]] [[Abdirashid Ali sharmarke]] oo loogu caano lisay
 oo ahaa labadii madaxweyne ee Somalia Sanadihii [[1960]] -[[1969]].
 [[1978]] waxaa yimid generaal [[maxamed Farah Aydid]] [[1988]] waxaa yimid Moxamed Ali Samater
