*Empty MediaWiki Message*

--- a/Libaaxley.mw
+++ b/Libaaxley.mw
@@ -7,6 +7,6 @@ oo ahaa labadii madaxweyne ee Somalia Sanadihii [[1960]] -[[1969]].
 oo ka mid ahaa Saraakiisha caanka ah Somaliyeed.
 Libaaxley waxay caan ku tahay dhir   iyo macdano sida Dhuxul dhagaxda iwm.
 waana goobtii dagaaladii Amxaarada iyi tigrega [[1887]] sal dhiga  Gumeysi diidkii
-Beelaha Sanroon iyo [[Ciise]] ay ku gabadeen. iyadoo dhawaana lagu gamay  gantaal ciidamada
+Beelaha [[Samaroon]] ay ku gabsadeen. iyadoo dhawaana lagu gamay  gantaal ciidamada
 mareykanka ee [[Djibouti]] ku sugani ay ku soo abaareen.
 waxaana Beel Taariikh ku leh Badda cas wakhtiyadii beryo-beryo.
