--- a/Wikipedia:Quljeed.mw
+++ b/Wikipedia:Quljeed.mw
@@ -1,6 +1,5 @@
-Qulujeed waa magaalo udhaw magaalada Bon, waxaana ka soo jeeda madaxwaynaha Daahir Riyaale, magaalada waxaa ku yaal 3 school oo hoose dhexe,iyo hal dugsi sare ah, magaalada Qulujeed waxay caan ku tahay, caanaha. Waa magaalada ugu caano badan gobolka [[Awdal]], magaaldana Boorama halkaas ayaa looga keena caanaha.
+Qulujeed waa magaalo udhaw magaalada Boon, Qulujeed waxa ay caasimad u tahay beelaha reer Dudub (Jibriil Yoonis) ee madaxwaynaha jamhuuriyada somaliland [[Daahir Rayaale Kaahin]], magaalada waxaa ku yaal 3 school oo hoose dhexe,iyo hal dugsi sare ah, magaalada Qulujeed waxay caan ku tahay, caanaha. Waa magaalada ugu caano badan gobolka [[Awdal]], magaaldana Boorama halkaas ayaa looga keena caanaha.
 
 {{Gumud}}
-quljeed  waxa kale  oo ay  caan ku  tahay  beeraha oo  xili roobeedka si aada loo beero  beeraha oo ay ka  go anaa garawga noocyadiisa   kala duwan   iyo galaysda waliba sida xasiida  oo aad looga isticmaalo   gaar  ahaana  ayka iibiyaan baabuurta ubaxaysa  wadanka  jabuuti  
-waxa kale  oo magaaladu  markii hore  ay  biyaha ka cabi  jirtay   balayo  ama  biyo xidheeno  laakiin hada waxa biyaha  ka istic maashaa hal ceel  oo mihiima  oo ku yaala  bariga magaalada
-qore axmedqahira
+Qulujeed  waxa kale  oo ay  caan ku  tahay  beeraha oo  xili roobeedka si aada loo beero  garawga noocyadiisa kala duwan iyo galaysda waliba sida xasiida oo aad looga isticmaalo gaar  ahaana  ayka iibiyaan baabuurta ubaxaysa wadanka jabuuti.  
+waxa kale oo magaaladu markii hore ay biyaha ka cabi jirtay   balayo  ama  biyo xidheeno  laakiin hada waxa biyaha ka isticmaashaa hal ceel oo mihiima oo ku yaala bariga magaalada
