--- a/Geerisa.mw
+++ b/Geerisa.mw
@@ -1,1 +1,1 @@
-Geeris Waa magaaladii uu ku dhashay madaxweynihii Hore ee [[djibouti]] [[Xassan Guled Abtidon]].
+Geeris Waa magaalo ku taal gobolka [[Awdal]] oo xadka dalka jabuuti u dhaw.
