--- a/Xisaab.mw
+++ b/Xisaab.mw
@@ -13,3 +13,4 @@ Laba tiro marka laysku dhufto wixii ka soo baxa waxaa la yiraahdaa ''taran''. si
 
 
 == Ku dar  '''+''' ==
+1=13=78=98\987=-7-=\876 marka leesku geyo=5374 saas ayeey noqonayaan
