--- a/Faransiiska.mw
+++ b/Faransiiska.mw
@@ -98,7 +98,7 @@ Magaalo :
 [[jv:Prancis]]
 [[ka:საფრანგეთი]]
 [[kab:Fransa]]
-[[kg:Falanse]]
+[[kg:Fwalansa]]
 [[kk:Франция]]
 [[kn:ಫ್ರಾನ್ಸ್]]
 [[ko:프랑스]]
