--- a/Talk:Bogga_Hore.mw
+++ b/Talk:Bogga_Hore.mw
@@ -1,5 +1,4 @@
-Hey I can't understand a word on this page (except for these). Whoever is Bogga Hore, here are some funny political cartoon puns. :).
+== '''ISDIRGALMOODKA'''==
 
-[[Image:http://www.countermilitary.org/PoliticalCartoons/militarycartoon.jpg]]
 
-[[Image:http://img.scoop.co.nz/stories/images/0012/09bc11725f147ce05e3c.jpeg]]
+[[Isdirgalmoodka]] waa [[galmada]] dhexmara labo qof oo isku sinji ama isku dir ka soo jeeda, sida uu eraygu muujinayo, kana kooban yahay erayo la iskudhafay, oo kala ah [Is + Dir(ka)+ Galmood]. Haddaba, marka galmadaasu ay ka wada dhaxeeso labo lab ah, waxaa kiiba lagu magacaabaa [[Isdirgalme]] ama labaduba [[Isdirgalmayaal]]. Sidoo kale, [[Isdirgalmato]] iyo [[Isdirgalmatooyin]] ay ku beegan yihiin, haddii ay yihiin dumar. Isdirgalmaha wuxuu qaadan karaa kaalinta ku beegan tan raggu ka qabto galmada ka dhaxeesa [[Kaladirgalmayaasha]] (rag iyo dumar), ama tan dhedigga; oona kaa koowaad loogu magac daro [[Utage]] (u + tage), kan labaadna [[Lootage]] (loo + tage). Sidoo kale waxay kala yihiin, [[Utagto]] iyo [[Lootagto]], dhanka isdirgalmoodka dumarka.
