/* Degmooyinka gobolka Bakool */

--- a/Gedo.mw
+++ b/Gedo.mw
@@ -29,7 +29,7 @@ Gedo waa gobol ka mid ah Gobolada Soomaaliya wuxuuna ku yaalaa koonfir-galbeed e
 * [[Baardheere]]
 
 Gobolkan waxaa magaala madaxdiisu tahay Garbahaarreey. Dhaqaalihiisuna waxa uu ku tiirsanyahay Beeraha iyo xoolaha nool.
-
+gobolkaan wuxuu dakad uyahay gobollo katirsan soomaaliya iyo walibagobolka wuqooyi bari  keenya
 {{Gobolada_Soomaaliya}}
 [[Category:Gobolada_Soomaaliya]]
 
@@ -41,4 +41,4 @@ Gobolkan waxaa magaala madaxdiisu tahay Garbahaarreey. Dhaqaalihiisuna waxa uu k
 [[it:Gedo]]
 [[jv:Gedo]]
 [[nl:Gedo]]
-[[pt:Gedo]]
+]
