Replacing page with 'Daarood keligiis uma baahna in halka gaar loogu faalleyo, waxaase kaaga filan in daarood yahay qabiil ka mid ah qabaailka sharafta leh ee soomaaliyeed. Qabaailka soomaaliyeed d...'

--- a/Daarood.mw
+++ b/Daarood.mw
@@ -1,17 +1,1 @@
-[[Image:Somalia ethnic grps 2002.jpg|thumb|300px|[[Qabaa'ilka Soomaaliya]]]]
-Daarood Waa qabiil aad iyo aad u weyn allaa weyn oo waaxid ah, Qabiilkan daarood waxaa uu degaa meelo badan oo ka mid ah [[Soomaaliya]] isla markaana markii taariikhda dib loo fiiriyo waa dadka ugu qiyaanada badan, ayagoo waliba hagardaamada iyo danaysiga ay aad ugu dheereeyaan. runtii qabiilka daarood in badan ayay soo dhagreen soomaalida kale, waa dadka ka danbeeyay fikradda 4.5, ayagoo iska weynaysiiya had iyo jeer qabaa'ilka kale,, waxaa xusid mudan in beesha majeerteen ee uu ka dhashay madaxweynihii lagu soo doortey kenya uu ka sheegey shirkii kenya lagu qabtay gudihiisa isagoo qudbeynaayo' taloow yaa abuurey others waxaan ma jiri jirinee, asagoo lahadlaayo hogaamiye kooxeedyadii kale ayuu dhahay maxaa noogu abuurteen others, anagga kaliya ayaa dowladda maamula lahayn ee waxaan ma jiri jirin, isagoo ula jeeday xiliggii dowladdii kacaanka in qabaa'ilka kale ee uu liidaayo inaysanba jirin waagaasi, sidaas waxaa meel fagaaraha ah oo saxaafadda joogto ku qudbeeyay cabdulahi yuusuf, madaxweyne kusheega lacagta ay cadowga soomaaliya soo siiyeen lagu soo doortay.!
-
-Wixii intaas dheer ee ku saabsan Daarood Waad baran doontaan inshaalaah waana kusoo dari doonaa Inshaalaah Saas ula socda.
-
-daarood waa sidaa aad sheegtay balse noomaad dhameey ee soo dhamee taariikhda umada soomaliyeed ama dadka u tilmaam.
-
-
-Soomaaliya waxaa dega qabaa'ilo uu ka mid yahay daaroodka waloow ay jiraan kuwa la'mid ah ama ka weyn  sid  dir, hawiye, digil mirifle. Waxaan u shegi lahaa walaalaha  Soomaaliyeed in aysan u cabirin fikirkooda ummadda balse tariikhda soomaaliya si sax ugu shegin dunidan. Waad mahadsantihiin 
-sida ay qoreen asalka wuxuu ka soo jeedaa carab kana soo gashay dadka casmarinta e daga casmara oo asal ka soo jeeda yamini
-
-
-Taariikhda qabiilka baaxada weyn ee Soomaaliyeed ee Daarood ma ahan mid lagu koobi karo qoraal.xaqiiqdii Daarood waa qabiil dega deegaano aad u balaaran oo Soomaaliya oo dhan ah,waa qabiil dega deegaanada kilinka 5aad ee Soomaali-galbeed,Wuqooyi-bari kenya oo ah dhul Soomaaliyeed isla markaana ay degan yihiin dad soomaaliyeed uguna badan degaanadaaas.Daarood waxaa ay soo maamuli jireen Soomaaliya ilaa qarnigii 10aad iyo kahor,waxyaabihii ka midka ahaa xukuumadihii ama maamuladii caanka ahaa ee Daarood waxaa ka mid ahaa Boqortooyadii soomaaliyeed oo ahaa beesha Daarood oo ilaa iyo hada jirta kana mid ah Boqortooyooyinka ugu da'da weyn caalamka maanta.taariikhihii halgamaagii caanka ahaa ee Soomaaliyeed Axmed Gureey oo ahaa qarniyadii dhexe,halgamaagii aadka ugu caan baxay la dirirka cadowga ummada Soomaaliyeed ee dal iyo dibadba laga yaqaanay Sayid Maxamed Cabdulle Xassan oo ahaa qarnigii 18aad iyo halgankiisii Daraawiishta oo uu horkacayay sayidku,ilaa uu ku kalifay inay gumaystihii kusoo weeraraan dayuurado dalka Soomaaliya oo aan weligeed wadan Afrika ah gumeyste ku weerarin.waxaa ka mid ah tariikhaha Daarood inagoo isku dayayna inaan soo koobno waxaan ka gaarno,madaxweynihii labaad ee Soomaaliya oo si dimuqraadiyad ah ay Soomaali weyn u dooratay Allaha u naxariistee C/rashiid Cali Sharma'arke,madaxweynihii ugu xukuumada dheeraa dalka Soomaaliya Allaha u naxariistee Maxamed Siyaad Barre,madaxweynaha hada xukuumada haya Col.C/laahi yuusuf.Daarood waa beesha Soomaali ugu deegaanka ballaaran.
-Fadlan qoraalkaaga ku salaysan taariikhda ummada Soomaaliyeed waad kusoo dari kartaa boggan.
-Qore Maxamed C/raxman Doymare
-
-Soomaaliya Soomaali baaleh.
+Daarood keligiis uma baahna in halka gaar loogu faalleyo, waxaase kaaga filan in daarood yahay qabiil ka mid ah qabaailka sharafta leh ee soomaaliyeed. Qabaailka soomaaliyeed dhamaantood waa walaalo qabiil kastaana kan kale ayuu wax ku yahay.
