*Empty MediaWiki Message*

--- a/Daarood.mw
+++ b/Daarood.mw
@@ -1,1 +1,1 @@
-Daarood keligiis uma baahna in halka gaar loogu faalleyo, waxaase kaaga filan in daarood yahay qabiil ka mid ah qabaailka sharafta leh ee soomaaliyeed. Qabaailka soomaaliyeed dhamaantood waa walaalo qabiil kastaana kan kale ayuu wax ku yahay.
+Daarood keligiis uma baahna in halka gaar loogu faalleyo, waxaase kaaga filan in daarood yahay qabiil ka mid ah qabaailka sharafta leh ee soomaaliyeed. Qabaailka soomaaliyeed dhamaantood waa walaalo qabiil kastaana kan kale ayuu wax ku yahay. Qabaailka soomaaliyeed waa kuwo aan wax faraq ahi u dhexeyn wadaagana dhib iyo dheef una soo wada halgamay xoreynta dalka iyo fidintii islaamku uu ku fiday geeska afrika .
