*Empty MediaWiki Message*

--- a/Talk:Bogga_Hore.mw
+++ b/Talk:Bogga_Hore.mw
@@ -1,4 +1,1 @@
-== '''ISDIRGALMOODKA'''==
-
-
-[[Isdirgalmoodka]] waa [[galmada]] dhexmara labo qof oo isku sinji ama isku dir ka soo jeeda, sida uu eraygu muujinayo, kana kooban yahay erayo la iskudhafay, oo kala ah [Is + Dir(ka)+ Galmood]. Haddaba, marka galmadaasu ay ka wada dhaxeeso labo lab ah, waxaa kiiba lagu magacaabaa [[Isdirgalme]] , wadartiisuna waa [[Isdirgalmayaal]]. Sidoo kale, [[Isdirgalmato]] iyo [[Isdirgalmatooyin]] ay ku beegan yihiin, haddii ay yihiin dumar. Isdirgalmaha wuxuu qaadan karaa, inta badan, kaalinta ku beegan tan raggu ka qabto galmada ka dhaxeesa [[Kaladirgalmayaasha]] (rag iyo dumar), ama tan dhedigga; oona kaa koowaad loogu magac daro [[Utage]] (u + tage), kan labaadna [[Lootage]] (loo + tage). Sidoo kale waxay kala yihiin, [[Utagto]] iyo [[Lootagto]], dhanka isdirgalmoodka dumarka. Waxaa kaloo jira mid qaadan kara labada doorba, looguna magac daro [[Rogmade]].
+Boggan waxaa loogu talagalay wadahadalka ku saabsan bogga hore. Fadlan ha'ku qorin qoraalo kale. --[[User:Mimursal|M. I. Mursal]] 22:08, 30 Diseembar 2007 (UTC)
