*Empty MediaWiki Message*

--- a/Wikipedia:Bacaadka.mw
+++ b/Wikipedia:Bacaadka.mw
@@ -1,2 +1,4 @@
-{{sandbox}} <!-- Fadlan waxba ha'ka bedelin laykaan -->
-waa dheel ee dhab iga ma'ahan waa iga tijaabo ee dhanbaal igama ahan lol mgrty
+'''Bold text'''
+[[Link title]]
+== Headline text ==
+anigoo ah adan mahamed hiraabe kuna dhashay magaalada moqdisho  kuna barbaaray isla magaalada moqdisho waxaan dhashay sanadkii 1969
