--- a/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
+++ b/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
@@ -159,7 +159,6 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[bn:মানবাধিকার সনদ]]
 [[bs:Univerzalna deklaracija o ljudskim pravima]]
 [[ca:Declaració Universal dels Drets Humans]]
-[[ch:Universal na Declarasion i Derecho Siha para i Taotao]]
 [[cs:Všeobecná deklarace lidských práv]]
 [[da:FN's Verdenserklæring om Menneskerettighederne]]
 [[de:Allgemeine Erklärung der Menschenrechte]]
@@ -177,7 +176,6 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[fur:Declarazion universâl dai dirits dal om]]
 [[fy:Universele Ferklearring fan de Rjochten fan de Minske]]
 [[gl:Declaración Universal dos Dereitos Humanos]]
-[[gn:Tekove yvypóra kuéra maymáva derecho kuaaukaha]]
 [[he:ההכרזה לכל באי עולם בדבר זכויות האדם]]
 [[hi:मानव अधिकारों की सार्वभौम घोषणा]]
 [[hu:Az Emberi Jogok Egyetemes Nyilatkozata]]
@@ -196,6 +194,7 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[lv:Vispārējā cilvēktiesību deklarācija]]
 [[mk:Декларација за правата на човекот]]
 [[ms:Perisytiharan Hak Asasi Manusia Sejagat]]
+[[ng:Omushangwa Gwaayehe Guuthemba Womuntu]]
 [[nl:Universele Verklaring van de Rechten van de Mens]]
 [[nn:Menneskerettsfråsegna]]
 [[no:Menneskerettighetserklæringen]]
