*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -1,3 +1,4 @@
+[[Image:Image:BUSHPERVEZ.jpg]]
 {{Infobox Country or territory
 |native_name              = {{lang|so|''Soomaaliya''}}<br/>{{rtl-lang|ar|الصومال}}<br/>Somalia
 |common_name              = Somalia
